# struct-reflection-rs

./: Cargo.toml  README.md
examples/: comprehensive_example.rs  multi_generic_example.rs  unnamed_structs_example.rs
src/: lib.rs
struct-reflection-derive/: Cargo.toml
struct-reflection-derive/src/: lib.rs
tests/: named_reflection_tests.rs  unnamed_reflection_tests.rs
