[package]
name = "struct-reflection"   
version = "0.1.0"
edition = "2021"
authors = ["Gaston Zanitti <gzanitti@gmail.com>"]
description = "A Rust library for obtaining struct field names at runtime through reflection-like capabilities"
license = "MIT"                 
repository = "https://github.com/gzanitti/struct-reflection-rs"
documentation = "https://docs.rs/struct-reflection"
readme = "README.md"
keywords = ["reflection", "struct", "macro", "derive"]
categories = ["development-tools", "data-structures"]

[dependencies]
struct-reflection-derive = { version = "0.1.0", path = "./struct-reflection-derive" }

[workspace]
members = ["struct-reflection-derive"]
